# Creative-AI-Engine-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
configs/: base.yaml  industrial_design.yaml  marketing.yaml
configs/bench/: vagos.yaml
configs/domains/base/: domain.yaml  examples.yaml
configs/domains/base/prompts/: analyst.md  evaluator.md  generator.md
configs/domains/industrial_design/: domain.yaml
configs/domains/industrial_design/prompts/: generator.md
configs/domains/marketing/: domain.yaml
configs/domains/marketing/prompts/: generator.md
configs/domains/tuesdi/: bench.yaml  domain.yaml  examples.yaml  profile.yaml
configs/domains/tuesdi/prompts/: analyst.md  evaluator.md  generator.md
docs/: auditoria-openai-2026-07-21.txt
scripts/: run_evolution.py  seed_memory.py
src/creative_engine/: __init__.py  benchmark.py  diagnostics.py  main.py
src/creative_engine/agents/: __init__.py  base.py  combined_evaluator.py  critic.py  evaluator_orchestrator.py  feasibility.py  generator.py  innovation.py  market.py  writer.py
src/creative_engine/analysis/: __init__.py  analyst.py  context.py  mirror.py
src/creative_engine/api/: app.py  auth.py  deps.py  guardrails.py
src/creative_engine/api/routes/: analysis.py  budget.py  diagnostics.py  domains.py  evolution.py  ideas.py  memory.py  stream.py
src/creative_engine/api/static/: app.js  index.html
src/creative_engine/bench/: __init__.py  config.py  harness.py  judge.py  report.py
src/creative_engine/core/: __init__.py  config.py  domain_registry.py  events.py  exceptions.py  memory_utils.py  models.py
src/creative_engine/evolution/: __init__.py  adaptive_operators.py  clustering.py  crossover.py  encoders.py  grounding.py  length_bias_diagnostic.py  map_elites.py  mutation.py  qd_engine.py  surprise.py
src/creative_engine/llm/: __init__.py  budget.py  factory.py  provider.py  router.py
src/creative_engine/memory/: __init__.py  graph.py  recommendation.py  repository.py
tests/: conftest.py  test_adaptive_operators.py  test_agents.py  test_analysis_endpoint.py  test_analyst.py  test_api_panel.py  test_bench.py  test_benchmark.py  test_budget.py  test_clustering.py  test_diagnostics.py  test_domain_prompt_cascade.py  test_domain_registry.py  test_domains_endpoint.py  test_empty_response.py  test_encoders.py  test_eval_concurrency.py  test_generator_parse.py  test_generic_domain_regression.py  test_grounding.py  test_length_bias_diagnostic.py  test_llm_url.py  test_map_elites.py  test_memory_retention.py  test_models.py  test_mutation.py  test_profile_integration.py  test_provider_token_param.py  test_qd_engine.py  test_router.py  test_security.py  test_stream.py  test_surprise.py  test_tuesdi_pack.py  test_writer.py
