[project]
name = "creative-ai-engine"
version = "0.1.0"
description = "Motor de generación creativa: múltiples ideas élite y diversas para un reto, mediante Quality-Diversity y agentes LLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Daniel García"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# Auditoría M3: neo4j y redis no están en el camino activo del motor
# (IdeaKnowledgeGraph nunca se conecta hoy; RecommendationEngine funciona
# solo con el repositorio Postgres). Se aíslan como extra para no cargar
# la imagen de producción con dependencias sin usar; `graph.py` importa
# `neo4j` de forma perezosa, así que el resto del motor funciona sin ellas.
graph = [
    "neo4j>=5.27.0",
    "redis>=5.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
creative-engine = "creative_engine.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creative_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
